CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${UTILS})

ADD_EXECUTABLE(depthAndStencils main.cpp)

TARGET_LINK_LIBRARIES(depthAndStencils ${EXTRA_LIBS} )
TARGET_LINK_LIBRARIES(depthAndStencils ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(depthAndStencils ${GLEW_LIBRARY})

TARGET_LINK_LIBRARIES(depthAndStencils ${SOIL_LIBRARY})