CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${UTILS})

ADD_EXECUTABLE(drawingPolygons main.cpp)

TARGET_LINK_LIBRARIES(drawingPolygons ${EXTRA_LIBS} )
TARGET_LINK_LIBRARIES(drawingPolygons ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(drawingPolygons ${GLEW_LIBRARY})