CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIRS})

ADD_EXECUTABLE(textures main.cpp)

TARGET_LINK_LIBRARIES(textures ${SOIL_LIBRARY})
TARGET_LINK_LIBRARIES(textures ${EXTRA_LIBS} )
TARGET_LINK_LIBRARIES(textures ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(textures ${GLEW_LIBRARY})