CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SOIL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})

ADD_EXECUTABLE(transformations main.cpp)

TARGET_LINK_LIBRARIES(transformations ${EXTRA_LIBS} )
TARGET_LINK_LIBRARIES(transformations ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(transformations ${GLEW_LIBRARY})

TARGET_LINK_LIBRARIES(transformations ${SOIL_LIBRARY})